--- a/About.css
+++ b/About.css
@@ -577,7 +577,7 @@ footer .copyright {
   .personal-touch-pic {
     width: 220px;
     height: 220px;
-    margin: 0 auto 2rem;
+    margin: 0;
   }
 }
 
